--- a/atry/index1.html
+++ b/atry/index1.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/XL.JPG" alt="" /></span>
+					<span class="image avatar"><img src="images/BY.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Xiaoxiao Li</a></h1>
 					<p>I am an AI researcher<br />
 					and a traveler</p>
