--- a/atry/index1.html
+++ b/atry/index1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Xiaoxiao Li, UBC</title>
+		<title>Bowen Yang, UNL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/BY.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Xiaoxiao Li</a></h1>
-					<p>I am an AI researcher<br />
-					and a traveler</p>
+					<p>I am a structural reliability researcher<br />
+					and a Photographer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -56,14 +56,14 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/shanshui1.jpg" alt="" />
+									<img src="images/bridge.jpg" alt="Golden Gate Bridge" />
 								</div>
 								<div class="container">
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
 									<p style="text-align:justify; text-justify:inter-ideograph;"> 
-                                        <br>  Hi, I am Xiaoxiao Li. I am an Assistant Professor in the Electrical and Computer Engineering Department and an Associate Member in the Computer Science Department at the University of British Columbia (UBC), leading the <a href="https://ubc-tea.github.io/lab-web/"> Trusted and Efficient AI (TEA) Lab</a>. I am also a core faculty member of <a href="https://blockchain.ubc.ca/core-management-team">Blockchain@UBC</a>, a member of <a href="https://bmiai.ubc.ca/">Biomedical Imaging and Artificial Intelligence</a>, and a member of <a href="https://leap-project.github.io/">LEAP project</a>. </br>
+                                        <br>  Hi, I am Bowen Yang. I am a PhD student in the Civil and Environmental Engineering Department and an ASCE student Member in at the University of Nebraska-Lincoln (UNL), leading the <a href="https://ubc-tea.github.io/lab-web/"> Trusted and Efficient AI (TEA) Lab</a>. I am also a core faculty member of <a href="https://blockchain.ubc.ca/core-management-team">Blockchain@UBC</a>, a member of <a href="https://bmiai.ubc.ca/">Biomedical Imaging and Artificial Intelligence</a>, and a member of <a href="https://leap-project.github.io/">LEAP project</a>. </br>
                                         <br>Before joining UBC, I was a postdoc in the Department of Computer Science at Princeton, working with <a href="https://www.cs.princeton.edu/~li/">Prof. Kai Li</a> and <a href="https://function.princeton.edu/">Prof. Olga Troyanskaya</a>. I obtained my Ph.D. degree in Biomedical Engineering from Yale University, where I was fortunate to be advised by <a href="https://seas.yale.edu/faculty-research/faculty-directory/james-duncan?destination=node%2F309">Prof. James Duncan</a>. I received Yale Advanced Graduate Leadership Fellowship. I obtained my B.S. (honors degree) from Chu Kochen College, Zhejiang University, China, in June 2015. </br> 
                                         <br>My current research lies in machine learning and its application to healthcare and blockchain. Our research topics cover deep learning, computer vision, trustworthy AI, data economy, medical image analysis and so on. I aim to narrow the gap between AI research and its applications by developing the next-generation trustworthy AI systems. What is trustworthy AI? Please read this <a href="https://arxiv.org/pdf/2107.06641.pdf"> survey</a>.</br>
                                 </p> </section>
