--- a/btry/index1.html
+++ b/btry/index1.html
@@ -54,7 +54,7 @@
             <ul class="icons">
                <li><a href="images/CV.pdf" class="fas fa-address-card"><span class="label"></span></a></li>
                <li><a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en" class="fa fa-graduation-cap"><span class="label"></span></a></li>
-               <li><a href="www.linkedin.com/in/bowenyang2022" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> 
+               <li><a href="https://www.linkedin.com/in/bowenyang2022/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> 
                <li><a href="https://github.com/Bowen2022" class="icon brands fa-github"><span class="label">Github</span></a></li>
                <li><a href="mailto:byang11@huskers.unl.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
@@ -66,26 +66,29 @@
       <div id="wrapper">
       <!-- Main -->
       <div id="main">
+
+
          <!-- One -->
          <section id="one">
             <div class="image main" data-position="center">
                <img src="images/bridge.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
-               <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln<a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey A Laman</a>, who was retired on July 2021. Before that, I studied Bridge Engineering at Changsha University of Science and Technology (长沙理工大学).</p>
+               <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey A Laman</a>, who was retired on July 2021. Before that, I studied Bridge Engineering at Changsha University of Science and Technology (长沙理工大学).</p>
 
 
-               <p>I am broadly interested in natural language processing, deep learning, and artificial intelligence. My current primary research interests are text summarization and conditional text generation. I interned at Google AI, AI2, Microsoft, and Huawei Noah’s Ark Lab during my PhD. </p>
+               <p>My broad areas of interest include truck platoons (a group of connected automated vehicles), structural reliability analysis, diagnostic load testing, and machine learning. My PhD research focuses on truck platoons, data driven analysis, and structural reliability analysis. In particular, I am interested in combining machine learning with civil engineering research (e.g., computer vision-based bridge monitoring, machine learning-based evaluation of bridge safety).  </p>
 
-               <p><strong><font color='orange'>I will join <a href="https://www1.cs.ucr.edu/">the CSE Department</a> at the <a href="https://www.ucr.edu/">University of California, Riverside</a> as an assistant professor in January 2023. I am looking for self-motivated PhDs / masters / interns to work in the area of Trustworthy and Efficient NLP, please consider <a href="https://www1.cs.ucr.edu/graduate/admissions/overview">applying</a>  if you are interested in working with me. </font></strong></p>
+               <p><strong><font color='blue'>I will graduate with a PhD degree in Civil Engineering in Aug 2023. I am currently looking for a master's degree in computer science that will allow me to gain enough computer knowledge to link traditional civil engineering structures with popular machine learning, computer vision, and artificial intelligence to reduce the likelihood of bridge collapse under heavy loads and improve the efficiency of bridge monitoring.</font></strong></p>
               
 
 
                <p style="text-align:center">
                   <a href="byang11@huskers.unl.edu">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en>Google Scholar</a> &nbsp/&nbsp
-                
-                  <a href="https://twitter.com/yuedongcs">Twitter</a> &nbsp/&nbsp
+
+                  <!--<a href="https://twitter.com/yuedongcs">Twitter</a> &nbsp/&nbsp-->
+
                   <a href="https://www.linkedin.com/in/bowenyang2022/">LinkedIn</a> &nbsp/&nbsp
                   <a href="images/CV.pdf">CV</a> &nbsp/&nbsp   
 
@@ -97,6 +100,8 @@
                </p>
             </div>
          </section>
+
+
          <!-- Two -->
          <section id="two">
             <div class="container">
@@ -104,13 +109,14 @@
                <div style="overflow-y: scroll; height:100px;">
                   <ul>
                      <li>
-                        <strong>[10/2022]</strong> Our paper "Faithful to the Document or to the World? Mitigating Hallucinations via Entity-Linked Knowledge in Abstractive Summarization" has been accepted to EMNLP 2022.
+                        <strong>[10/2022]</strong> Our paper "A Reliability-Based Service III Operational Evaluation for Prestressed Girder Bridges Under Platoon Loads" has been accepted to Transportation Research Board <a href="https://www.trb.org/AnnualMeeting/AnnualMeeting.aspx">(TRB)</a> 2023.
                      </li>
                      <li>
-                        <strong>[10/2022]</strong> Our paper "Learning with Rejection for Abstractive Text Summarization" has been accepted to EMNLP 2022.
+                        <strong>[09/2022]</strong> Our presentation "A reliability-based evaluation of truck platoon-loaded steel bridges for Strength and Service" has been selected to TRB AKB20 Committee Nugget Meeting 2023.
                      </li>
                      <li>
-                        <strong>[07/2022]</strong> Our workshop on "Efficient Natural Language and Speech Processing (ENLSP-II): The Future of Pre-trained Models" has been accepted to NeurIPS 2022.
+                        <strong>[06/2022]</strong> Our Tech Report "Outdoor Laboratory and Testbed for Bridge Health" has been published by
+Nebraska Department of Transportation (NDOT) 2022.
                      </li>
                      <li>
                         <strong>[04/2022]</strong> I will be joining the University of Califonia, Riverside as a tenure-track assistant professor.
@@ -122,6 +128,9 @@
                </div>
             </div>
          </section>
+
+
+
          <!-- Three -->
          <section id="three">
             <div class="container">
