--- a/btry/index1.html
+++ b/btry/index1.html
@@ -86,17 +86,12 @@
                <p style="text-align:center">
                   <a href="byang11@huskers.unl.edu">Email</a> &nbsp/&nbsp
                   <a href="https://scholar.google.com/citations?user=baKGtMUAAAAJ&hl=en>Google Scholar</a> &nbsp/&nbsp
-
-                  <!--<a href="https://twitter.com/yuedongcs">Twitter</a> &nbsp/&nbsp-->
-
                   <a href="https://www.linkedin.com/in/bowenyang2022/">LinkedIn</a> &nbsp/&nbsp
                   <a href="images/CV.pdf">CV</a> &nbsp/&nbsp   
-
              	<!--
                   <a href="images/Yue_Dong_Research_Statement.pdf">Research Statement</a> &nbsp/&nbsp    
                   <a href="https://www.1point3acres.com/bbs/thread-890304-1-1.html">招生</a>
 		-->
-
                </p>
             </div>
          </section>
@@ -115,16 +110,12 @@
                         <strong>[09/2022]</strong> Our presentation "A reliability-based evaluation of truck platoon-loaded steel bridges for Strength and Service" has been selected to TRB AKB20 Committee Nugget Meeting 2023.
                      </li>
                      <li>
-                        <strong>[06/2022]</strong> Our Tech Report "Outdoor Laboratory and Testbed for Bridge Health" has been published by
-Nebraska Department of Transportation (NDOT) 2022.
+                        <strong>[06/2022]</strong> Our Tech Report "Outdoor Laboratory and Testbed for Bridge Health" has been published by Nebraska Department of Transportation (NDOT) 2022.
                      </li>
                      <li>
-                        <strong>[04/2022]</strong> I will be joining the University of Califonia, Riverside as a tenure-track assistant professor.
+                        <strong>[09/2021]</strong>  Our paper "Safe Platooning Headways on Girder Bridges" has been published by Journal of the Transportation Research Record <a href="https://journals.sagepub.com/home/trr">(TRR), 2021.
                      </li>
-                     <li>
-                        <strong>[12/2021]</strong> Our "Text Generation with Text-Editing Models" tutorial has been accepted to NAACL 2022.
-                     </li>
-                  </ul>
+                     </ul>
                </div>
             </div>
          </section>
