--- a/btry/index2.html
+++ b/btry/index2.html
@@ -127,17 +127,49 @@
          <!-- Three -->
          <section id="three">
             <div class="container">
-               <h3>Research</h3>
-               My primary research interests are in the fields of Natural Language Processing, Machine Learning, Artificial Intelligence, with broader interests in Statistical Learning, Computer Vision, and AI-Powered Social Intelligence.
-               <ul>
-                  <li><strong>Conditional Text Generation:</strong> Learning to assign probabilities to text sequences given some (long-term) conditioning context, addressing tasks such as text summarization, conversational AI, and machine translation.</li>
-                  <li><strong>Controllable Text Generation:</strong> Text generation with control over output attributes, such as topic, style, and sentiment. </li>
-                  <li><strong>Multimodal Learning:</strong> Combining different modalities of information for performance improvement, e.g. learning semantic correspondences between language and vision.</li>
-                  <li><strong>Trustworthy NLP:</strong> Developing robust, fair, factual, knowledge-grouned, explainable and privacy-preserving language models.</li>
-                  <li><strong>AI for Social Good:</strong> Fake news detection; biases reduction & fairness;  empathic text generation.</li>
-               </ul>
-            </div>
-         </section>
+              <h3>Recent Projects</h3>
+		<p>Here are my recent exciting projects. For the full list of my projects, please refer to my publications.</p>
+		<div class="features">
+                <article>
+		<a href="#" class="image"><img src="images/fedbn.png" alt="" /></a>
+	        <div class="inner">
+	        <h4>Federated Learning on Non-iid Features via Local Batch Normalization</h4>
+		<p style="text-align:justify; text-justify:inter-ideograph;">Most of the previous federated learning work has focused on a difference in the distribution of labels. Unlike those settings, we address an important problem of FL, e.g., different scanner/sensors in medical imaging, where local clients may store examples with different marginal or conditional feature distributions compared to other nodes, which we denote as feature shift non-iid.  In this work, we propose an effective method that uses local batch normalization to alleviate the feature shift before averaging models. </p>
+		</div>
+		</article>
+		<!--<article>
+									<a href="#" class="image"><img src="images/tranfer_prune.png" alt="" /></a>
+											<div class="inner">
+												<h4>Transfer Pruning for Inversion Attack Defense</h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;"> We propose to prune a target neural network with a public datasetand transfers it to the distributed learning setting to collaboratively  train  the  pruned  network  with  distributed  private datasets via sharing a hidden layer of representations, without sharing the data. Our experiments show that the proposed approach achieves a much better trade-off between accuracy and privacy preservation.</p>
+											</div>
+										</article> -->
+										<article>
+											<a href="#" class="image"><img src="images/fed_abide.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Privacy-preserving Multi-site Medical Images Analysis</h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;">We present a privacy-preserving federated learning framework for multi-site fMRI analysis. To overcome the domain shift issue, we have proposed two strategies: MoE and adversarial domain alignment to boost federated learning model performance.  We have shown federated learning performance can potentially be boosted by adding domain adaptation and discussed the condition of benefits. Our approach brings new hope for accelerating deep learning applications in the field of medical imaging, where data isolation and the emphasis on data privacy have become challenges.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/braingnn.png" alt="" /></a>
+											<div class="inner">
+												<h4>BrainGNN: Explainable Graph Neural Network for Neuroimaging Analysis</h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;">BrainGNN takes graphs built from neuroimages as inputs, and then outputs prediction results together with interpretation results.With the built-in interpretability, BrainGNN not only performs better on prediction than alternative methods, but also detects salient brain regions associated with predictions and discovers brain community patterns.</p>
+											</div>
+										</article>
+                                        <article>
+											<a href="#" class="image"><img src="images/distdeepshap.png" alt="" /></a>
+											<div class="inner">
+												<h4>DistDeepSHAP: Efficient Shapley Explanation for Feature Importance Estimation Under Uncertainty</h4>
+												<p style="text-align:justify; text-justify:inter-ideograph;">We propose DistDeepSHAP, a post-hoc feature importance estimation method under uncertainty evaluation for deep learning models.First, it can obtain uncertainty estimates for the provided feature importance scores. Second, it can better utilize the empirical distribution and has the potential for better feature importance scores estimation from the generated percentile saliency maps. Last but not least, it can compare with arbitrary subgroup references and interpret subgroup salient features, which is crucial for medical image study.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+
          <!-- Four -->
          <section id="four">
             <div class="container">
