--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -74,7 +74,9 @@
                <img src="images/bridge.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
-               <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey A Laman</a>, who was retired on July 2021. Before that, I obtained my bachelor's degree in Bridge Engineering from Changsha University of Science and Technology (长沙理工大学).</p>
+               <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. My dissertation committee members are: Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>,Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/jay-puckett/">Jay Puckett</a>,
+			   Dr. <a href="https://engineering.unl.edu/daniel-linzell/">Daniel Linzell</a>,Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/george-morcous/">George Morcous</a>.
+			   I received my master of science degree in Civil Engineering from the Penn State University <a href="https://www.cee.psu.edu/">(PSU)</a>, supervised by Dr. <a href="https://online.flipbuilder.com/wool/gsun/files/basic-html/page4.html">Jeffrey Laman</a>, who was retired in July 2021. Before that, I obtained my bachelor's degree in Bridge Engineering from Changsha University of Science and Technology (长沙理工大学).</p>
 
 
                <p>My broad areas of interest include truck platoons (a group of connected automated vehicles), structural reliability analysis, diagnostic load testing, and machine learning. My PhD research focuses on truck platoons, data driven analysis, and structural reliability analysis. In particular, I am interested in combining machine learning with civil engineering research (e.g., computer vision-based bridge monitoring, machine learning-based evaluation of bridge safety).  </p>
@@ -115,7 +117,7 @@
                         <strong>[06/2022]</strong> Our Tech Report "Outdoor Laboratory and Testbed for Bridge Health" has been published by Nebraska Department of Transportation (NDOT) 2022.
                      </li>
                      <li>
-                        <strong>[09/2021]</strong>  Our paper "Safe Platooning Headways on Girder Bridges" has been published by Journal of the Transportation Research Record <a href="https://journals.sagepub.com/home/trr">(TRR), 2021.
+                        <strong>[09/2021]</strong>  Our paper "Safe Platooning Headways on Girder Bridges" has been published by Journal of the Transportation Research Record <a href="https://journals.sagepub.com/home/trr">(TRR)</a> 2021.
                      </li>
                      </ul>
                </div>
@@ -132,7 +134,7 @@
                
 	<div class="features">
                                         <article>
-											<a href="#" class="image"><img src="images/fedbn.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/ServiceIII.png" alt="" /></a>
 											<div class="inner">
 												<h4>Federated Learning on Non-iid Features via Local Batch Normalization</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">Most of the previous federated learning work has focused on a difference in the distribution of labels. Unlike those settings, we address an important problem of FL, e.g., different scanner/sensors in medical imaging, where local clients may store examples with different marginal or conditional feature distributions compared to other nodes, which we denote as feature shift non-iid.  In this work, we propose an effective method that uses local batch normalization to alleviate the feature shift before averaging models. </p>
@@ -146,21 +148,21 @@
 											</div>
 										</article> -->
 										<article>
-											<a href="#" class="image"><img src="images/fed_abide.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/StrengthI.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Privacy-preserving Multi-site Medical Images Analysis</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">We present a privacy-preserving federated learning framework for multi-site fMRI analysis. To overcome the domain shift issue, we have proposed two strategies: MoE and adversarial domain alignment to boost federated learning model performance.  We have shown federated learning performance can potentially be boosted by adding domain adaptation and discussed the condition of benefits. Our approach brings new hope for accelerating deep learning applications in the field of medical imaging, where data isolation and the emphasis on data privacy have become challenges.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/braingnn.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/MLCourse1.png" alt="" /></a>
 											<div class="inner">
 												<h4>BrainGNN: Explainable Graph Neural Network for Neuroimaging Analysis</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">BrainGNN takes graphs built from neuroimages as inputs, and then outputs prediction results together with interpretation results.With the built-in interpretability, BrainGNN not only performs better on prediction than alternative methods, but also detects salient brain regions associated with predictions and discovers brain community patterns.</p>
 											</div>
 										</article>
                                         <article>
-											<a href="#" class="image"><img src="images/distdeepshap.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/MLCourse2.png" alt="" /></a>
 											<div class="inner">
 												<h4>DistDeepSHAP: Efficient Shapley Explanation for Feature Importance Estimation Under Uncertainty</h4>
 												<p style="text-align:justify; text-justify:inter-ideograph;">We propose DistDeepSHAP, a post-hoc feature importance estimation method under uncertainty evaluation for deep learning models.First, it can obtain uncertainty estimates for the provided feature importance scores. Second, it can better utilize the empirical distribution and has the potential for better feature importance scores estimation from the generated percentile saliency maps. Last but not least, it can compare with arbitrary subgroup references and interpret subgroup salient features, which is crucial for medical image study.</p>
@@ -180,96 +182,14 @@
                <ul>
                    <h4><u>2022</u></h4>
                   <li>
-                     <strong> <a href="">Faithful to the Document or to the World? Mitigating Hallucinations via Entity-Linked Knowledge in Abstractive Summarization
-
-</a>  </strong><br>
-                     <strong> Yue Dong </strong>, John Wieting and Pat Verga <br>
-                     <em> <strong>Findings of EMNLP</strong>, 2022 </em>  
+                     <strong> <a href="">A Reliability-Based Service III Operational Evaluation for Prestressed Girder Bridges Under Platoon Loads</strong><br>
+                     <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
+                     <em> <strong>TRB Conference Proceedings</strong>, 2023 </em>  
                   </li>
                   <li>
-                     <strong> <a href="">Learning with Rejection for Abstractive Text Summarization</a>  </strong><br>
-                     Meng Cao, <strong> Yue Dong </strong>, Jingyi He and Jackie Chi Kit Cheung <br>
-                     <em> <strong>EMNLP</strong>, 2022 </em>  
-                  </li>
-                  <li>
-                     <strong> <a href="https://arxiv.org/pdf/2109.09784.pdf">Inspecting the Factuality of Hallucinated Entities in Abstractive Summarization</a>  </strong><br>
-                     Meng Cao, <strong> Yue Dong </strong> and Jackie C. K. Cheung <br>
-                     <em> <strong>ACL</strong>, 2022 </em>  
-                  </li>
-                  <br>
-                  <h4><u>2021</u></h4>
-                  <li>
-                     <strong> <a href="https://arxiv.org/pdf/2101.00371.pdf">On-the-Fly Attention Modulation for Neural Generation </a> </strong><br>
-                     <strong>Yue Dong</strong>, Chandra Bhagavatula, Ximing Lu, Jena D. Hwang, Antoine Bosselut, Jackie Chi Kit Cheung and Yejin Choi <br>
-                     <em> <strong>Findings of ACL</strong>, 2022 </em> 
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/2021.acl-short.137.pdf">Bringing Structure into Summaries: a Faceted Summarization Dataset for Long Scientific Documents</a>  </strong><br>
-                     Rui Meng, khushboo Thaker, Lei Zhang, <strong>Yue Dong</strong>, Xingdi Yuan, Tong Wang and Daqing He <br>
-                     <em> <strong>ACL</strong>, 2021 </em> [<a href="https://github.com/hfthair/emerald_crawler">code</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://arxiv.org/pdf/2005.00513.pdf">Discourse-Aware Unsupervised Summarization for Long Scientific Documents</a> </strong><br>
-                     <strong>Yue Dong*</strong>, Andrei Romascanu* and Jackie C. K. Cheung <br>
-                     <em> <strong>EACL</strong>, 2021 </em> [<a href="https://github.com/mirandrom/HipoRank">code</a>] 
-                  </li>
-                  <br>
-                  <h4><u>2020</u></h4>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/2020.emnlp-main.749/">Multi-Fact Correction in Abstractive Text Summarization</a>   </strong><br>
-                     <strong> Yue Dong </strong>, Shuohang Wang, Zhe Gan, Yu Cheng, Jackie C. K. Cheung and Jingjing Liu <br>
-                     <em> <strong>ENMLP</strong>, 2020 </em>  
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/2020.emnlp-main.648/"> Multi-XScience: A Large-scale Dataset for Extreme Multi-document Summarization of Scientific Articles </a> </strong><br>
-                     Yao Lu, <strong>Yue Dong</strong>, and Laurent Charlin <br>
-                     <em> <strong>EMNLP</strong>, 2020 </em> [<a href="https://github.com/yaolu/Multi-XScience">code</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/2020.emnlp-main.506/"> Factual Error Correction for Abstractive Summarization Models</a>   </strong><br>
-                     Meng Cao, <strong>Yue Dong</strong>, Jiapeng Wu and Jackie C. K. Cheung <br>
-                     <em> <strong>EMNLP</strong>, 2020 </em> [<a href="https://github.com/mcao516/Factual-Error-Correction">code</a>] 
-                  </li>
-                  <br>
-                  <h4><u>2019</u></h4>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/P19-1331/">EditNTS: An Neural Programmer-Interpreter Model for Sentence Simplification through Explicit Editing</a>  </strong><br>
-                     <strong>Yue Dong</strong>, Zichao Li, Mehdi Rezagholizadeh and Jackie Cheung <br>
-                     <em> <strong>ACL</strong>, 2019 </em> [<a href="https://github.com/yuedongP/EditNTS">code</a>] [<a href=" https://vimeo.com/384771870">talk</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/D19-1620/">Countering the Effects of Lead Bias in News Summarization via Multi-Stage Training and Auxiliary Losses</a>  </strong><br>
-                     <strong>Yue Dong*</strong>, Matt Grenander*, Jackie Cheung and Annie Louis <br>
-                     <em> <strong>EMNLP-IJCNLP</strong>, 2019 </em> [<a href="https://github.com/mgrenander/banditsum-kl">code</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/P19-1331/">Learning Multi-task Communication with Message Passing for Sequence Learning</a>  </strong><br>
-                     Pengfei Liu, <strong>Yue Dong</strong>, Jie Fu, Xipeng Qiu and Jackie Cheung <br>
-                     <em> <strong>AAAI</strong>, 2019 </em> 
-                  </li>
-                  <br>
-                  <h4><u>2018</u></h4>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/D18-1409/">BanditSum: Extractive Summarization as a Contextual Bandit </a>  </strong><br>
-                     <strong>Yue Dong</strong>, Yikang Shen, Eric Crawford, Herke van Hoof and Jackie Chi Kit Cheung <br>
-                     <em> <strong>EMNLP</strong>, 2018 </em> [<a href="https://github.com/yuedongP/BanditSum">code</a>][<a href=" https://vimeo.com/306160623">talk</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://aclanthology.org/D18-1094/">A Hierarchical Neural Attention-based Text Classifier</a>   </strong><br>
-                     Koustuv Sinha, <strong>Yue Dong</strong>, Jackie Chi Kit Cheung and Derek Ruths <br>
-                     <em> <strong>EMNLP</strong> 2018 </em> [<a href="https://github.com/koustuvsinha/hier-class">code</a>] 
-                  </li>
-                  <li>
-                     <strong> <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/coin.12146">Threaded ensembles of autoencoders for stream learning</a>   </strong><br>
-                     <strong>Yue Dong</strong> and Nathalie Japkowicz <br>
-                     <em> <strong>Computational Intelligence</strong>, 2018 </em> [<a href="#">code</a>] 
-                  </li>
-                  <br>
-                  <h4><u>Before 2018</u></h4>
-                  <li>
-                     <strong> <a href="https://link.springer.com/chapter/10.1007/978-3-319-34111-8_37">Threaded Ensembles of Supervised and Unsupervised Neural Networks for Stream Learning</a>   </strong><br>
-                     <strong>Yue Dong</strong> and Nathalie Japkowicz <br>
-                     <em> <strong>Canadian Conference on Artificial Intelligence</strong>, 2016 </em> <strong><font color='red'>(Best Paper Award)</font></strong> [<a href="#">code</a>] 
+                     <strong> <a href="">Safe platooning headways on girder bridges</a></strong><br>
+                     <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
+                     <em> <strong>Journal of the Transportation Research Record</strong>, 2021 </em>  
                   </li>
                </ul>
             </div>
