--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -45,7 +45,7 @@
 			   <li><a href="#five">Publications</a></li>             
                <li><a href="#six">Mentoring and teaching</a></li>
                <li><a href="#seven">Awards</a></li>
-			   li><a href="#Eight">Talks</a></li>
+			   <li><a href="#Eight">Presentations</a></li>
                
             </ul>
          </nav>
@@ -264,21 +264,11 @@
 		 <!-- Eight -->
          <section id="seven">
             <div class="container">
-               <h3> Talks </h3>
+               <h3> Presentations </h3>
                <ul>
-                   <li>Robust and Trustworthy NLP Through The Lens of Text Summarization [<a href="images/yue_job_talk_2022.pdf">slides</a>]</li>
-                  <ul>
-                     - Invited Talk at University of California - Riverside, March 2021 <br>
-                     - Invited Talk at University of National University of Singapore, March 2021<br>
-                     - Invited Talk at Google AI, March 2021<br>
-                     - Invited Talk at University of Waterloo, February 2021<br>
-                     - Invited Talk at University of Utah, February 2021<br>
-                     - Invited Talk at Simon Fraser University, February 2021<br>
-                     - Invited Talk at HEC Montreal & Mila, February 2021<br>
-                     - Invited Talk at University of Michigan - Dearborn, February 2021<br>
-                     - Invited Talk at Queen's University, January 2021<br>
-                   </ul> 
-               </ul>
+                   <li>Safe platooning headways on girder bridges, Internation Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf">slides</a>]</li>
+				   <li>Truck platoon effects on girder bridges, University of Nebraska-Lincoln Graduate student symposium, February 2022</li>
+			   </ul>
             </div>
          </section>         
         
