--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -219,12 +219,12 @@
                <ul>
                    <h4><u>2022</u></h4>
                   <li>
-                     <strong> <a href="">A Reliability-Based Service III Operational Evaluation for Prestressed Girder Bridges Under Platoon Loads</strong><br>
+                     <strong> A Reliability-Based Service III Operational Evaluation for Prestressed Girder Bridges Under Platoon Loads</strong><br>
                      <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
                      <em> <strong>TRB Conference Proceedings</strong>, 2023 </em>  
                   </li>
                   <li>
-                     <strong> <a href="">Safe platooning headways on girder bridges</a></strong><br>
+                     <strong> Safe platooning headways on girder bridges</strong><br>
                      <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
                      <em> <strong>Journal of the Transportation Research Record</strong>, 2021 </em>  
                   </li>
@@ -236,8 +236,19 @@
          <section id="six">
             <div class="container">
                <h3> Mentoring and teaching </h3>
-               <strong> [Winter 2023] </strong> CS 260 - Seminar in Natural Language Processing <br>
-               <strong> [Spring 2023] </strong> <a href="https://www.coursicle.com/ucr/courses/CS/173/"> CS 173 - Introduction to Natural Language Processing</a> 
+			   <ul> Undergraduatestudent Research Mentoring
+               <li>
+					<strong> [Summer 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a>
+						-Giovanni Ortiz,San Jose State University<br>
+					<strong> [Summer 2021] </strong> <a href="images/REU2021.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a>
+						-Joshua Trimm,Texas A&M University-Kingsville<br>
+			   </li>
+			        Teaching Assitant
+               <li>
+					<strong> [Spring 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a> 
+					<strong> [Spring 2021] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a> 
+			   </li>			   	  		   
+			   </ul>
             </div>
          </section>
 		 
@@ -246,17 +257,11 @@
             <div class="container">
                <h3> Awards </h3>
                <ul>
-                  - Alexander Graham Bell Canada Graduate Scholarship - Doctoral (CGS D) - Accepted, 2018-2019 <br>
-                  - NSERC Postgraduate Scholarship - Doctoral (PGS D) - Accepted, 2017-2018 <br>
-                  - FRQNT Doctoral Scholarship - Declined (rank first in all 2016 applicants in mathematics), 2016 <br>
-                  - FRQNT Master’s Research Scholarship, 2016<br>
-                  - NSERC Canada Graduate Scholarships - CGS Master’s, 2015<br>
-                  - University of Ottawa Excellence Scholarship, 2015 - 2016<br>
-                  - NSERC Undergraduate Student Research Awards (USRA), Summer 2014<br>
-                  - Dean’s Merit Scholarships - Faculty of Science, University of Ottawa, 2014<br>
-                  - University of Ottawa Women’s Summer Research Award, Summer 2013<br>
-                  - University of Ottawa Work/Study Research Award, Summer 2012<br>
-                  <strong><font color='red'><a href="http://www.sneac.com/info/1009/2054.htm"> - First prize in mathematics competition in Shaanxi province, China</a></font>, 2008</strong> 
+                  - John W. Hossack Engineering Fund Scholarship, UNL - Accepted, July 2022<br>
+                  - Robert A. and Becky Reisdorff Student Support Fellowship, UNL  - Accepted, Aug 2021 <br>
+                  - Milton E. Mohr Fellowship, UNL  - Accepted, May 2021 <br>
+                  - Member of Chi Epsilon Chapter, UNL, from Oct 2020<br>
+                  - Robert A. and Becky Reisdorff Student Support Fellowship,UNL - Accepted, Aug 2020<br>                               
                </ul>
             </div>
          </section>
@@ -266,7 +271,7 @@
             <div class="container">
                <h3> Presentations </h3>
                <ul>
-                   <li>Safe platooning headways on girder bridges, Internation Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf">slides</a>]</li>
+                   <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf">slides</a>]</li>
 				   <li>Truck platoon effects on girder bridges, University of Nebraska-Lincoln Graduate student symposium, February 2022</li>
 			   </ul>
             </div>
