--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -217,16 +217,31 @@
                <h3>Publications</h3>
                <br>
                <ul>
-                   <h4><u>2022</u></h4>
+                   <h4><u>2021-2023</u></h4>
                   <li>
                      <strong> A Reliability-Based Service III Operational Evaluation for Prestressed Girder Bridges Under Platoon Loads</strong><br>
                      <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
                      <em> <strong>TRB Conference Proceedings</strong>, 2023 </em>  
                   </li>
+				  <li>
+                     <strong> Outdoor Laboratory and Testbed for Bridge Health</strong><br>
+                     Richard L Wood PI, Mitra Nasimi, <strong> Bowen Yang </strong>, Christine E Wittich <br>
+                     <em> <strong>Contact</strong>, 2022 </em>  
+                  </li>
+				  <li>
+                     <strong> afe platooning headways on girder bridges</strong><br>
+                     <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
+                     <em> <strong>International Bridge Conference</strong>, 2021 </em>  
+                  </li>
                   <li>
                      <strong> Safe platooning headways on girder bridges</strong><br>
                      <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
                      <em> <strong>Journal of the Transportation Research Record</strong>, 2021 </em>  
+                  </li>
+				  <li>
+                     <strong> Truck platoon effects on girder bridges</strong><br>
+                     <strong> Bowen Yang </strong>, Joshua Steelman, Jay Puckett and Daniel Linzell <br>
+                     <em> <strong>NDOT</strong>, 2021 </em>  
                   </li>
                </ul>
             </div>
@@ -238,14 +253,14 @@
                <h3> Mentoring and teaching </h3>
 			   <ul> Undergraduatestudent Research Mentoring
                <li>
-					<strong> [Summer 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a>
+					<strong> [Summer 2022] </strong> <a href="images/REU2022.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Giovanni Ortiz,San Jose State University<br>
-					<strong> [Summer 2021] </strong> <a href="images/REU2021.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a>
+					<strong> [Summer 2021] </strong> <a href="images/REU2021.pdf">Sustainability of Horizontal Civil Networks in Rural Areas</a><br>
 						-Joshua Trimm,Texas A&M University-Kingsville<br>
 			   </li>
 			        Teaching Assitant
                <li>
-					<strong> [Spring 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a> 
+					<strong> [Spring 2023] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a><br> 
 					<strong> [Spring 2021] </strong> <a href="https://catalog.unl.edu/undergraduate/courses/cive/cive.pdf"> CIVE 441 - Steel Design I</a> 
 			   </li>			   	  		   
 			   </ul>
@@ -272,7 +287,7 @@
                <h3> Presentations </h3>
                <ul>
                    <li>Safe platooning headways on girder bridges, International Bridge Conference, June 2021[<a href="images/2021_IBC_Slides.pdf">slides</a>]</li>
-				   <li>Truck platoon effects on girder bridges, University of Nebraska-Lincoln Graduate student symposium, February 2022</li>
+				   <li>Truck platoon effects on girder bridges, UNL Graduate student symposium, February 2022</li>
 			   </ul>
             </div>
          </section>         
