--- a/btry/indexR3.html
+++ b/btry/indexR3.html
@@ -32,9 +32,10 @@
          <header>
             <span class="image avatar"><img src="images/BY.jpg" alt="" /></span>
             <h1 id="logo"><a href="#">Bowen Yang 杨博闻</a></h1>
-            <!-- <p> PhD candidate<br />
+            <p> PhD candidate<br />
                University of Nebraska-Lincoln, Lincoln<br />
-                    </p> -->
+                    </p> 
+					
          </header>
          <nav id="nav">
             <ul>
@@ -70,7 +71,7 @@
          <!-- One -->
          <section id="one">
             <div class="image main" data-position="center">
-               <img src="images/bridge2.jpg" alt="Golden gate bridge" />
+               <img src="images/bridge3.jpg" alt="Golden gate bridge" />
             </div>
             <div class="container">
                <p>Hi, I am Bowen Yang, a final-year PhD student in Civil Engineering at University of Nebraska–Lincoln <a href="https://engineering.unl.edu/cee/">(UNL)</a>, supervised by Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>. My dissertation committee members are: Dr. <a href="https://engineering.unl.edu/cee/joshua-steelman/">Joshua Steelman</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/jay-puckett/">Jay Puckett</a>, Dr. <a href="https://engineering.unl.edu/daniel-linzell/">Daniel Linzell</a>, Dr. <a href="https://engineering.unl.edu/durhamschool/faculty/george-morcous/">George Morcous</a>.
@@ -235,7 +236,7 @@
                   - Robert A. and Becky Reisdorff Student Support Fellowship, UNL  - Accepted, Aug 2021 <br>
                   - Milton E. Mohr Fellowship, UNL  - Accepted, May 2021 <br>
                   - Member of Chi Epsilon Chapter, UNL, from Oct 2020<br>
-                  - Robert A. and Becky Reisdorff Student Support Fellowship,UNL - Accepted, Aug 2020<br>                               
+                  - Robert A. and Becky Reisdorff Student Support Fellowship, UNL - Accepted, Aug 2020<br>                               
                </ul>
             </div>
          </section>
